# text-to-html

./: README.md  pyproject.toml  test_output.html
tests/: test_text_to_html.py
text_to_html/: __init__.py  handlers.py  markup.py  rules.py  simple_markup.py  util.py
