[tool.poetry]
name = "text-to-html"
version = "0.1.0"
description = ""
authors = ["Takahiro Konno <t.konno@shishimaro.co.jp>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
